@@ -27,9 +27,9 @@ using namespace std;
 struct T;
 
 reference_wrapper<int(float, ...)>::result_type                       i01;
-reference_wrapper<int(float, ...) const>::result_type                 i02;
-reference_wrapper<int(float, ...) volatile>::result_type              i03;
-reference_wrapper<int(float, ...) const volatile>::result_type        i04;
+// reference_wrapper<int(float, ...) const>::result_type                 i02;
+// reference_wrapper<int(float, ...) volatile>::result_type              i03;
+// reference_wrapper<int(float, ...) const volatile>::result_type        i04;
 
 reference_wrapper<int(*)(float, ...)>::result_type                    i05;
 reference_wrapper<int(* const)(float, ...)>::result_type              i06;
